Revert "wywalenie wsparcia muzyki z pewnej platformy"
This reverts commit 25bc8ceffb498a6db286dc99485a7bcf9d9db02d.